# llm-github

./: .cruft.json  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  modules.md
llm_github/: core.py  execute.py
tests/: test_core.py  test_foo.py
