[tool.poetry]
name = "llm_github"
version = "0.0.1"
description = "Tools for extracting knowledge from GitHub issues, PR comments, etc."
authors = ["Mark Andrew Miller <mamillerpa@gmail.com>"]
repository = "https://github.com/turbomam/llm-github"
documentation = "https://turbomam.github.io/llm-github/"
readme = "README.md"
packages = [
    { include = "llm_github" }
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
python-dotenv = "^1.0.1"
requests-cache = "^1.2.1"
requests = "^2.32.3"
typing-extensions = "^4.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
types-requests = "^2.32.0.20240622"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = { extras = ["python"], version = "^0.23.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["llm_github"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    "YTT",
    "S",
    "B",
    "A",
    "C4",
    "T10",
    "SIM",
    "I",
    "C90",
    "E",
    "W",
    "F",
    "PGH",
    "UP",
    "RUF",
    "TRY",
]
ignore = [
    "E501",
    "E731",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["llm_github"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
